# qvox

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
.github/workflows/: ci.yml
python/: pyproject.toml  start_server.py
python/server/: app.py  models.py  protocols.py  schemas.py  storage.py  tasks.py
python/server/routes/: generated.py  generation.py  health.py  references.py  tasks.py
python/tests/: conftest.py  test_routes_generated.py  test_routes_generation.py  test_routes_health.py  test_routes_references.py  test_routes_tasks.py  test_schemas.py  test_storage.py  test_tasks.py
src/: app.rs  config.rs  main.rs  message.rs
src/api/: client.rs  mod.rs  types.rs
src/audio/: hash.rs  mod.rs  player.rs  processing.rs  recorder.rs
src/server/: manager.rs  mod.rs
src/transcribe/: mod.rs  whisper.rs
src/views/: clone_tab.rs  custom_tab.rs  design_tab.rs  generated_list.rs  mod.rs  multispeaker_tab.rs  settings.rs  upload_tab.rs
