[package]
name = "qvox"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.15"
rodio = "0.22"
cpal = "0.15"
hound = "3.5"
sha2 = "0.10"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
rfd = "0.15"
futures-util = "0.3"

[dev-dependencies]
proptest = "1"
wiremock = "0.5"
mockall = "0.12"
