[project]
name = "qvox-server"
version = "0.1.0"
description = "FastAPI server wrapping Qwen3-TTS for the qvox GUI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.18",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
    "pyright>=1.1.380",
    "ruff>=0.6.0",
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingTypeStubs = false
reportUnknownMemberType = false

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH",
    "RUF", "S", "T20", "DTZ", "PIE", "PT", "RSE", "RET", "PERF",
]
ignore = [
    "S104",   # binding to all interfaces (uvicorn)
    "RET504", # unnecessary assignment before return
    "UP007",  # Use X | Y for union (keep Optional for readability in some cases)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
